Get main landing page

--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
     <head>
         <title>TabbyTabTab</title>
     </head>
-    <body>
-        Hello, world!
-        
-        Bananas for sale. 
-    </body>
+    
+        <body>
+            <h1>Hello, world!</h1>
+            <h2>Bananas for sale.</h2>
+            <p>
+                There's a lot of them out there, but none like <em>these</em>
+            </p>
+            <div>
+            <img src="/Images/bananaBunch.jpg" width = 200px>
+            </div>
+        </body>
 </html>
